Fri Feb 12 12:20:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (name_err_initialize, nometh_err_initialize): [DOC] fix
	  argument positions.  optional parameters except for the message
	  are placed at the last.

Fri Feb 12 11:49:49 2016  Anthony Dmitriyev  <antstorm@gmail.com>

	* net/ftp.rb: add NullSocket#closed? to fix closing not opened
	  connection.  [Fix GH-1232]

Fri Feb 12 11:17:38 2016  Bogdan  <bogdanvlviv@gmail.com>

	* re.c (rb_reg_initialize_m): [DOC] fix missing right bracket.
	  [Fix GH-1243]

Thu Feb 11 14:57:58 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SIZEOF, RUBY_DEFINT): fix for types
	  which are conditionally available depending on architectures
	  when universal binary, e.g., __int128.

Thu Feb 11 06:26:18 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (RUBY_DEFINT): use Parameter Expansion.

Thu Feb 11 05:33:24 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (int128_t): don't check HAVE_XXX (for example
	  HAVE___INT128) because RUBY_CHECK_SIZEOF() don't define it for
	  config.h and use of $ac_cv_sizeof___int128 alternates the check.
	  (and don't need to define because users shouldn't know that)

Wed Feb 10 12:03:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ARFLAGS): check if deterministic mode flag is
	  effective, which is on by default on Ubuntu.

Tue Feb  9 16:36:23 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/logger.rb: Remove block from Logger.add as it's not needed
	  patch provided by Daniel Lobato Garcí [fix GH-1240] [Bug #12054]

Tue Feb  9 14:32:23 2016  Zachary Scott  <zzak@ruby-lang.org>

	* ext/zlib/zlib.c: Document mtime header behavior with patch by @schneems
	  Fixes [GH-1129]: https://github.com/ruby/ruby/pull/1129

Tue Feb  9 13:52:49 2016  Zachary Scott  <zzak@ruby-lang.org>

	* re.c: Remove deprecated kcode argument from Regexp.new and compile
	  patch provided by Dylan Pulliam [Bug #11495]
